--- a/source/index.html
+++ b/source/index.html
@@ -109,9 +109,69 @@
              </p>
            </li>
            <p class="proposal__description proposal__description--iphone">
-             <img class="proposal-descriptions__image" src="img/iphone 3.png" width="157" height="320" alt="iphone">
+             <img class="proposal-descriptions__image" src="img/iphone-3.png" width="157" height="320" alt="iphone">
            </p>
          </ul>
+        </div>
+      </section>
+      <section class="research">
+        <div class="research__wrapper">
+          <h2 class="research__title">
+            Эффект<br>
+            на 24 часа!
+          </h2>
+          <div class="research__list">
+            <p class="research__item">
+              Британские ученые провели исследования<br>
+              и докозали, что положительный эффект<br>
+              от использования приложения длится<br>
+              целые сутки!
+            </p>
+            <a class="research__larger" href="#">Узнать больше об исследовании</a>
+          </div>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="visually-hidden">Отзывы о нас</h2>
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <div class="reviews__author-info">
+                <p class="reviews__text">
+                 «Это приложение перевернуло мой мир и позволило по-новому взглянуть на<br>
+                 привычные серые вещи! А еще я познакомился со своей будущей женой в<br>
+                 комментариях к выложенной фотографии!»
+                </p>
+                <cite class="reviews__author-name">Николай Петров</cite>
+                <p class="reviews__text">25 лет,водитель трамвая</p>
+              </div>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
+              <div class="reviews__author-info">
+                <p class="reviews__text">
+                 «Я нашел много новых друзей! Спасибо вам за приложение.»
+                </p>
+                <cite class="reviews__author-name">Алексей Гулящий</cite>
+                <p class="reviews__text">20 лет, менеджер</p>
+              </div>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
+              <div class="reviews__author-info">
+                <p class="reviews__text">
+                 «Очень хорошее приложение! Рекомендую всем! Много ярких впечатлений!»
+                </p>
+                <cite class="reviews__author-name">Владимир Рыбкин</cite>
+                <p class="reviews__text">32 года, полицейский</p>
+              </div>
+            </blockquote>
+            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+            <button class="reviews__next" type="button">Следующий отзыв</button>
+         </div>
+         <p class="reviews__toggles">
+          <button class="slider__toggle slider__toggle--current" type="button">1</button>
+          <button class="slider__toggle" type="button">2</button>
+          <button class="slider__toggle" type="button">3</button>
+        </p>
         </div>
       </section>
     </main>
