--- a/source/index.html
+++ b/source/index.html
@@ -174,6 +174,16 @@
         </p>
         </div>
       </section>
+      <section class="tariff">
+        <div class="tariff__wrapper">
+          <dl class="tariff__list">
+            <div class="tariff__item">
+              <dt class="tariff__description"></dt>
+              <dd class="tariff__icon"></dd>
+            </div>
+          </dl>
+        </div>
+      </section>
     </main>
   </body>
 </html>
