--- a/source/index.html
+++ b/source/index.html
@@ -176,14 +176,133 @@
       </section>
       <section class="tariff">
         <div class="tariff__wrapper">
-          <dl class="tariff__list">
-            <div class="tariff__item">
-              <dt class="tariff__description"></dt>
-              <dd class="tariff__icon"></dd>
-            </div>
-          </dl>
+          <table class="tariff__list">
+            <tr class="tariff__item">
+              <th></th>
+              <th>
+                <p class="tariff__description">БАЗА</p>
+                <p class="tariff__number">1,99 USD</p>
+              </th>
+              <th>
+                <p class="tariff__description">СТАНДАРТ</p>
+                <p class="tariff__number">3,99 USD</p>
+              </th>
+              <th>
+                <p class="tariff__description">АНЛИМ</p>
+                <p class="tariff__number">9,99 USD</p>
+              </th>
+            </tr>
+            <tr class="tariff__item">
+              <td>
+                Розовый фильтр
+              </td>
+              <td>
+                <img src="img/yes.jpg" width="31" height="21" alt="yes">
+              </td>
+              <td>
+                <img src="img/yes.jpg" width="31" height="21" alt="yes">
+              </td>
+              <td>
+                <img src="img/yes.jpg" width="31" height="21" alt="yes">
+              </td>
+            </tr>
+            <tr class="tariff__item">
+              <td>
+                Смайлики
+              </td>
+              <td>
+                <img src="img/no.jpg" width="27" height="27" alt="no">
+              </td>
+              <td>
+                <img src="img/yes.jpg" width="31" height="21" alt="yes">
+              </td>
+              <td>
+                <img src="img/yes.jpg" width="31" height="21" alt="yes">
+              </td>
+            </tr>
+            <tr class="tariff__item">
+              <td>
+                Комментарии
+              </td>
+              <td>
+                <img src="img/no.jpg" width="27" height="27" alt="no">
+              </td>
+              <td>
+                <img src="img/no.jpg" width="27" height="27" alt="no">
+              </td>
+              <td>
+                <img src="img/yes.jpg" width="31" height="21" alt="yes">
+              </td>
+            </tr>
+          </table>
+          <p class="reviews__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle slider__toggle--current" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
         </div>
       </section>
+      <section class="address">
+        <div class="address__wrapper">
+          <h2 class="address__title">
+            Остались вопросы?<br>
+            Свяжитесь с нами!
+          </h2>
+          <div class="address-phone__contacts contacts">
+            <b class="address__title">Звоните:</b>
+            <p class="contacts__phone">
+              <a class="address__phone" href="tel:+78125556666">
+                <span class="address__phone-mobile">Тел.:</span> +7 (812) 555-66-66
+              </a>
+            </p>
+          </div>
+          <div class="address-mail__contacts contacts">
+            <b class="address__title">Пишите:</b>
+            <p class="contacts__mail">
+              <a class="address__mail" href="#">
+                mail@htmlacademy.ru
+              </a>
+            </p>
+          </div>
+          <div class="address-company__contacts contacts">
+            <b class="address__title">Приезжайте в гости:</b>
+            <p class="contacts__company">
+              ул. Большая Конюшенная, 19/8
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="map">
+        <div class="map__wrapper"></div>
+      </section>
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <h2 class="visually-hidden">Давай дружить</h2>
+        <div class="page-footer__heading heading">
+          <img src="img/glasses.svg" width="59" height="40" alt="очки">
+          <img src="img/pink.svg" width="74" height="23" alt="название сайта Пинк">
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="img/html-academy-footer-logo.svg" width="27" height="34" alt="logo">
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
