--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
       <section class="download">
         <div class="page-main__header-wrapper">
           <header class="page-main__header">
-            <h2 class="title">Взгляните на жизнь<br>
+            <h2 class="title">Взгляните на жизнь
                иначе!</h2>
            <div class="page-main__header-download">
              <button class="page-main__download" type="button">Скачать приложение</button>
@@ -75,7 +75,7 @@
          <h2 class="visually-hidden">Наши предложения</h2>
          <div class="proposal__stats">
            <p class="proposal__text">
-             Устали от серости<br>
+             Устали от серости
              мегаполиса?
            </p>
            <p class="proposal__text">
@@ -87,24 +87,24 @@
            <li class="proposal__item">
              <h3 class="proposal__title">Поднимает настроение</h3>
              <p class="proposal__description">
-               Приложение позволит вам победить<br>
-               осеннюю хандру и депрессию<br>
+               Приложение позволит вам победить
+               осеннюю хандру и депрессию
                буквально в несколько кликов!
              </p>
            </li>
            <li class="proposal__item">
              <h3 class="proposal__title">Меняет мир вокруг</h3>
              <p class="proposal__description">
-                Сделайте снимок и украсте его<br>
-                смайликом или текстовой подписью,<br>
+                Сделайте снимок и украсте его
+                смайликом или текстовой подписью,
                 чтобы усилить эффект
              </p>
            </li>
            <li class="proposal__item">
              <h3 class="proposal__title">Заводит новых друзей</h3>
              <p class="proposal__description">
-               Ставьте лайки, комментируйте,<br>
-               делитесь фотографиями с друзьями и<br>
+               Ставьте лайки, комментируйте,
+               делитесь фотографиями с друзьями и
                заводите новых
              </p>
            </li>
@@ -117,14 +117,14 @@
       <section class="research">
         <div class="research__wrapper">
           <h2 class="research__title">
-            Эффект<br>
+            Эффект
             на 24 часа!
           </h2>
           <div class="research__list">
             <p class="research__item">
-              Британские ученые провели исследования<br>
-              и докозали, что положительный эффект<br>
-              от использования приложения длится<br>
+              Британские ученые провели исследования
+              и докозали, что положительный эффект
+              от использования приложения длится
               целые сутки!
             </p>
             <a class="research__larger" href="#">Узнать больше об исследовании</a>
