--- a/source/index.html
+++ b/source/index.html
@@ -42,7 +42,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Фотоприложение "Пинк"</h1>
       <section class="download">
-        <div class="page-main__header-wrapper">
+        <div class="download__wrapper">
           <header class="page-main__header">
             <h2 class="title">Взгляните на жизнь
                иначе!</h2>
@@ -177,21 +177,23 @@
       <section class="tariff">
         <div class="tariff__wrapper">
           <table class="tariff__list">
-            <tr class="tariff__item">
-              <th></th>
-              <th>
-                <p class="tariff__description">БАЗА</p>
-                <p class="tariff__number">1,99 USD</p>
-              </th>
-              <th>
-                <p class="tariff__description">СТАНДАРТ</p>
-                <p class="tariff__number">3,99 USD</p>
-              </th>
-              <th>
-                <p class="tariff__description">АНЛИМ</p>
-                <p class="tariff__number">9,99 USD</p>
-              </th>
-            </tr>
+            <thead>
+              <tr class="tariff__item">
+                <th></th>
+                <th>
+                  <p class="tariff__description">БАЗА</p>
+                  <p class="tariff__number">1,99 USD</p>
+                </th>
+                <th>
+                  <p class="tariff__description">СТАНДАРТ</p>
+                  <p class="tariff__number">3,99 USD</p>
+                </th>
+                <th>
+                  <p class="tariff__description">АНЛИМ</p>
+                  <p class="tariff__number">9,99 USD</p>
+                </th>
+              </tr>
+             </thead>
             <tr class="tariff__item">
               <td>
                 Розовый фильтр
