--- a/source/form.html
+++ b/source/form.html
@@ -49,63 +49,138 @@
       </section>
       <section class="contest__forms">
         <div class="forms__wrapper">
-          <h2 class="visually-hidden">Заполните форму</h2>
-          <p>Поделитесь своей историей и получите шанс выиграть
-             ценный приз — 1000 миль на вашу бонусную карту!
-             Пожалуйста, заполните форму ниже:</p>
-          <form class="contest-forms__information names" action="https://echo.htmlacademy.ru" method="POST">
-            <p>
-              <label class="username" for="surname">фамилия:</label>
-              <input class="surname-icon-user" id="surname" type="text" name="user-surname" placeholder="Укажите фамилию*">
+          <form class="traveling__forms" action="https://echo.htmlacademy.ru" method="POST">
+            <h2 class="visually-hidden">Заполните форму</h2>
+            <p>Поделитесь своей историей и получите шанс выиграть
+              ценный приз — 1000 миль на вашу бонусную карту!
+              Пожалуйста, заполните форму ниже:
             </p>
-            <p>
-              <label class="username" for="first-name">имя:</label>
-              <input class="first-name-icon-user" id="first-name" type="text" name="your-name" placeholder="Введите ваше имя*">
-            </p>
-            <p>
-              <label class="username" for="patronymic">отчество:</label>
-              <input class="patronymic-icon-user" id="patronymic" type="text" name="your-middle-name" placeholder="Ну и отчество тоже">
-            </p>
-          </form>
-          <form class="contest-forms__radio" action="https://echo.htmlacademy.ru" method="POST">
-            <fieldset class="filter-item__radio">
-              <legend>с каким приложением путешествовали?</legend>
-              <div class="radio__control">
-                <ul class="radio-control__application-on-the-phone">
-                  <li class="filter-option filter-radio">
-                    <input class="visually-hidden filter-input-radio filter-input" type="radio" name="for-applications" value="ios" id="filter-for-ios" checked>
-                    <label class="for-ios" for="filter-for-ios">Pinc для IOS</label>
-                  </li>
-                  <li class="filter-option filter-radio">
-                    <input class="visually-hidden filter-input-radio filter-input" type="radio" name="for-applications" value="android" id="filter-for-android">
-                    <label class="for-android" for="filter-for-android">Pinc на Android</label>
-                  </li>
-                  <li class="filter-option filter-radio">
-                    <input class="visually-hidden filter-input-radio filter-input" type="radio" name="for-applications" value="windows-phone" id="filter-for-windows-phone">
-                    <label class="for-windows-phone" for="filter-for-windows-phone">Windows Phone</label>
-                  </li>
-                </ul>
-              </div>
-            </fieldset>
-          </form>
-          <form class="contest-forms__contacts-info" action="https://echo.htmlacademy.ru" method="POST">
-            <fieldset class="contact-info">
-              <legend>контактная информация</legend>
-              <div class="contact-info__wrapper">
-                <div class="contact-info__phone">
-                  <input class="phone-info" id="contact-phone" type="tel" name="your-contact" placeholder="Номер, пожалуйста"><br>
-                  <label class="your-contact-phone" for="contact-phone">номер телефона</label>
+           <div class="contest-forms__information names">
+             <p>
+               <label class="username" for="surname">фамилия:</label>
+               <input class="surname-icon-user" id="surname" type="text" name="user-surname" placeholder="Укажите фамилию*">
+             </p>
+             <p>
+               <label class="username" for="first-name">имя:</label>
+               <input class="first-name-icon-user" id="first-name" type="text" name="your-name" placeholder="Введите ваше имя*">
+             </p>
+             <p>
+               <label class="username" for="patronymic">отчество:</label>
+               <input class="patronymic-icon-user" id="patronymic" type="text" name="your-middle-name" placeholder="Ну и отчество тоже">
+             </p>
+           </div>
+           <div class="contest-forms__radio">
+             <fieldset class="filter-item__radio">
+               <legend>с каким приложением путешествовали?</legend>
+               <div class="radio__control">
+                 <ul class="radio-control__application-on-the-phone">
+                   <li class="filter-option filter-radio">
+                     <input class="visually-hidden filter-input-radio filter-input" type="radio" name="for-applications" value="ios" id="filter-for-ios" checked>
+                     <label class="for-ios" for="filter-for-ios">Pinc для IOS</label>
+                   </li>
+                   <li class="filter-option filter-radio">
+                     <input class="visually-hidden filter-input-radio filter-input" type="radio" name="for-applications" value="android" id="filter-for-android">
+                     <label class="for-android" for="filter-for-android">Pinc на Android</label>
+                   </li>
+                   <li class="filter-option filter-radio">
+                     <input class="visually-hidden filter-input-radio filter-input" type="radio" name="for-applications" value="windows-phone" id="filter-for-windows-phone">
+                     <label class="for-windows-phone" for="filter-for-windows-phone">Windows Phone</label>
+                   </li>
+                 </ul>
+               </div>
+             </fieldset>
+           </div>
+           <div class="contest-forms__contacts-info">
+             <fieldset class="contact-info">
+               <legend>контактная информация</legend>
+               <div class="contact-info__wrapper">
+                 <div class="contact-info__phone">
+                   <input class="phone-info" id="contact-phone" type="tel" name="your-contact" placeholder="Номер, пожалуйста"><br>
+                   <label class="your-contact-phone" for="contact-phone">номер телефона</label>
+                 </div>
+                 <div class="contact-info__email">
+                   <input class="email-info" id="contact-email" type="email" name="your-contact" placeholder="Введите почту*"><br>
+                   <label class="your-contact-email" for="contact-email">адрес почты</label>
+                 </div>
+               </div>
+             </fieldset>
+           </div>
+           <div class="contest-forms__progress-checkbox">
+             <fieldset class="progress-form">
+                <legend>ваши безбашенные достижения в путешествии</legend>
+                <div class="checkbox-control">
+                  <ul class="control-filler">
+                    <li class="filter-option filter-checkbox">
+                      <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="selfie" id="filter-selfie" checked>
+                      <label for="filter-selfie">Сделал селфи с акулой</label>
+                    </li>
+                    <li class="filter-option filter-checkbox">
+                      <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="beach" id="filter-beach" checked>
+                      <label for="filter-beach">Обгорел на пляже</label>
+                    </li>
+                    <li class="filter-option filter-checkbox">
+                      <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="actor" id="filter-actor">
+                      <label for="filter-actor">Видел Чака Норриса</label>
+                    </li>
+                    <li class="filter-option filter-checkbox">
+                      <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="souvenir" id="filter-souvenir">
+                      <label for="filter-souvenir">Накупил сувениров</label>
+                    </li>
+                    <li class="filter-option filter-checkbox">
+                      <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="tower" id="filter-tower" checked>
+                      <label for="filter-tower">Удержал башню</label>
+                    </li>
+                    <li class="filter-option filter-checkbox">
+                      <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="hotel" id="filter-hotel">
+                      <label for="filter-hotel">Разгромил отель</label>
+                    </li>
+                  </ul>
                 </div>
-                <div class="contact-info__email">
-                  <input class="email-info" id="contact-email" type="email" name="your-contact" placeholder="Введите почту*"><br>
-                  <label class="your-contact-email" for="contact-email">адрес почты</label>
-                </div>
-              </div>
-            </fieldset>
+              </fieldset>
+           </div>
+           <div class="contest-forms__textarea">
+             <fieldset class="textarea-emotion">
+               <legend>опишите свои эмоции</legend>
+               <p>
+                 <textarea name="comment" rows="5" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+               </p>
+             </fieldset>
+           </div>
+           <button class="button-form" type="submit">Отправить форму</button>
+           <p>
+             *-обязательные для заполнения поля
+           </p>
           </form>
-
         </div>
       </section>
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <h2 class="visually-hidden">Давай дружить</h2>
+        <div class="page-footer__heading heading">
+          <img src="img/glasses.svg" width="59" height="40" alt="очки">
+          <img src="img/pink.svg" width="74" height="23" alt="название сайта Пинк">
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="img/html-academy-footer-logo.svg" width="27" height="34" alt="logo">
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
