--- a/source/form.html
+++ b/source/form.html
@@ -182,5 +182,37 @@
         </div>
       </div>
     </footer>
+    <section class="modal__error">
+      <div class="modal__background-text">
+        <div class="modal-error__wrapper">
+         <h2 class="error-text">Что-то пошло не так!</h2>
+         <p>
+           Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
+         </p>
+       </div>
+      </div>
+      <div class="modal__background-button">
+        <div class="modal-error__wrapper">
+          <button class="button-form button-error" type="submit">ок</button>
+        </div>
+      </div>
+    </section>
+    <section class="modal__despatch">
+      <div class="modal__background-text">
+        <div class="modal-despatch__wrapper">
+         <h2 class="despatch-text">Ваша заявка отправлена</h2>
+         <p>
+          Спасибо за ваше участие, ваша заявка уже
+          поступила к нам. В ближайшее время мы
+          рассмотрим ее и оповестим вас.
+         </p>
+       </div>
+      </div>
+      <div class="modal__background-button">
+        <div class="modal-despatch__wrapper">
+          <button class="button-form button-despatch" type="submit">закрыть окно</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
