--- a/source/index.html
+++ b/source/index.html
@@ -108,9 +108,9 @@
                заводите новых
              </p>
            </li>
-           <p class="proposal__description proposal__description--iphone">
+           <!--<p class="proposal__description proposal__description-iphone">
              <img class="proposal-descriptions__image" src="img/iphone-3.png" width="157" height="320" alt="iphone">
-           </p>
+           </p>-->
          </ul>
         </div>
       </section>
@@ -175,6 +175,7 @@
         </div>
       </section>
       <section class="tariff">
+        <h2 class="visually-hidden">Таблица</h2>
         <div class="tariff__wrapper">
           <table class="tariff__list">
             <tr class="tariff__item">
@@ -273,6 +274,7 @@
         </div>
       </section>
       <section class="map">
+        <h2 class="visually-hidden">Карта</h2>
         <div class="map__wrapper"></div>
       </section>
     </main>
