Начинаю делать каталог и добавляю классы.

--- a/source/form.html
+++ b/source/form.html
@@ -39,7 +39,7 @@
         </div>
       </nav>
     </header>
-    <main class="page-main">
+    <main class="page-main main-forms">
       <section class="contest">
         <div class="contest__wrapper">
           <h1 class="contest__title">
