--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,6 +46,81 @@
             Фотографии
             пользователей
           </h1>
+          <p class="photos__text">
+            Взгляните на фотографии, которые выкладывают пользователи!
+            Видите, как не хватает ваших?
+          </p>
+        </div>
+      </section>
+      <section class="photos__gallery">
+        <h2 class="visually-hidden">Фотографии пользователей</h2>
+        <div class="photo__panorama">
+          <p class="panorama__block">панорама дня</p>
+        </div>
+        <div class="photos__wrapper">
+          <div class="photos__comment">
+            <p class="comment__author-name"><b>Анна</b>(5 минут назад)</p>
+            <p class="comment__like">нравится:215</p>
+            <p class="comment__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+          </div>
+          <div class="user__photos">
+            <div class="photos__comment">
+              <p class="comment__author-name"><b>Левон</b>(5 часов назад)</p>
+              <p class="comment__text">Вчера он на луну летал,сегодня в руки к нам попал.</p>
+              <p class="comment__like">нравится:356</p>
+            </div>
+          </div>
+          <div class="user__photos">
+            <div class="photos__comment">
+              <p class="comment__author-name"><b>Антон</b>(12 часов назад)</p>
+              <p class="comment__text">Соседи будут рады!</p>
+              <p class="comment__like">нравится:666</p>
+            </div>
+          </div>
+          <div class="user__photos">
+            <div class="photos__comment">
+              <p class="comment__author-name"><b>Борис</b>(20 часов назад)</p>
+              <p class="comment__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <p class="comment__like">нравится:215</p>
+            </div>
+          </div>
+          <div class="user__photos">
+            <div class="photos__comment">
+              <p class="comment__author-name"><b>Сергей</b>(25 часов назад)</p>
+              <p class="comment__text">Самая кубанская в мире!</p>
+              <p class="comment__like">нравится:4</p>
+            </div>
+          </div>
+          <div class="user__photos">
+            <div class="photos__comment">
+              <p class="comment__author-name"><b>Максим</b>(40 часов назад)</p>
+              <p class="comment__text">Где снег-то?</p>
+              <p class="comment__like">нравится:150</p>
+            </div>
+          </div>
+          <div class="user__photos">
+            <div class="photos__comment">
+              <p class="comment__author-name"><b>Надежда</b>(45 часов назад)</p>
+              <p class="comment__text">Всем GM и взаимные лайки!</p>
+              <p class="comment__like">нравится:2560</p>
+            </div>
+          </div>
+          <div class="user__circulation">
+            <p class="photos__text">
+              Затмите их всех!
+              Выкладывайте все, что накопилось в телефоне!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="photos-filters">
+        <div class="photos-filters__wrapper">
+          <div class="user__foto"></div>
+          <div class="range__filter">
+            <div class="range__control"></div>
+            <div class="range__control"></div>
+            <div class="range__control"></div>
+          </div>
         </div>
       </section>
     </main>
