--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,76 +53,120 @@
         </div>
       </section>
       <section class="photos__gallery">
-        <h2 class="visually-hidden">Фотографии пользователей</h2>
+        <h2 class="visually-hidden">Фото пользователей</h2>
         <div class="photo__panorama">
           <p class="panorama__block">панорама дня</p>
         </div>
         <div class="photos__wrapper">
           <div class="photos__comment">
             <p class="comment__author-name"><b>Анна</b>(5 минут назад)</p>
-            <p class="comment__like">нравится:215</p>
+            <p class="comment__like">нравится:215 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             <p class="comment__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Левон</b>(5 часов назад)</p>
               <p class="comment__text">Вчера он на луну летал,сегодня в руки к нам попал.</p>
-              <p class="comment__like">нравится:356</p>
+              <p class="comment__like">нравится:356 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Антон</b>(12 часов назад)</p>
               <p class="comment__text">Соседи будут рады!</p>
-              <p class="comment__like">нравится:666</p>
+              <p class="comment__like">нравится:666 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Борис</b>(20 часов назад)</p>
               <p class="comment__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
-              <p class="comment__like">нравится:215</p>
+              <p class="comment__like">нравится:215 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Сергей</b>(25 часов назад)</p>
               <p class="comment__text">Самая кубанская в мире!</p>
-              <p class="comment__like">нравится:4</p>
+              <p class="comment__like">нравится:4 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Максим</b>(40 часов назад)</p>
               <p class="comment__text">Где снег-то?</p>
-              <p class="comment__like">нравится:150</p>
+              <p class="comment__like">нравится:150 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Надежда</b>(45 часов назад)</p>
               <p class="comment__text">Всем GM и взаимные лайки!</p>
-              <p class="comment__like">нравится:2560</p>
+              <p class="comment__like">нравится:2560 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="photos-filters">
+        <div class="photos-filters__wrapper">
           <div class="user__circulation">
             <p class="photos__text">
               Затмите их всех!
               Выкладывайте все, что накопилось в телефоне!
             </p>
           </div>
-        </div>
-      </section>
-      <section class="photos-filters">
-        <div class="photos-filters__wrapper">
           <div class="user__foto"></div>
           <div class="range__filter">
-            <div class="range__control"></div>
-            <div class="range__control"></div>
-            <div class="range__control"></div>
+            <div class="range__control">
+              <img src="img/range-filter/crop.svg" width="44" height="44" alt="обрезать">
+              <div class="scale"></div>
+              <div class="toggle" tabindex="0"></div>
+            </div>
+            <div class="range__control">
+              <img src="img/range-filter/fill.svg" width="48" height="43" alt="насыщенность">
+              <div class="scale"></div>
+              <div class="toggle" tabindex="0"></div>
+            </div>
+            <div class="range__control">
+              <img src="img/range-filter/contrast.svg" width="32" height="32" alt="контраст">
+              <div class="scale"></div>
+              <div class="toggle" tabindex="0"></div>
+            </div>
+          </div>
+          <div class="post-it__user-foto">
+            <button class="button-user button-post-it" type="submit">Запостить</button>
+            <button class="button-user button-cancel" type="submit">Отмена</button>
           </div>
         </div>
       </section>
     </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <h2 class="visually-hidden">Давай дружить</h2>
+        <div class="page-footer__heading heading">
+          <img src="img/glasses.svg" width="59" height="40" alt="очки">
+          <img src="img/pink.svg" width="74" height="23" alt="название сайта Пинк">
+        </div>
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="img/html-academy-footer-logo.svg" width="27" height="34" alt="logo">
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
