Добавил цвет создал файл

--- a/source/index.html
+++ b/source/index.html
@@ -45,8 +45,8 @@
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Фотоприложение "Пинк"</h1>
-      <section class="download">
-        <div class="page-main__header-wrapper">
+      <section class="page-main__download">
+        <div class="download-header__wrapper">
           <header class="page-main__header">
             <h2 class="title">Взгляните на жизнь<br>
               иначе!</h2>
