--- a/source/index.html
+++ b/source/index.html
@@ -184,18 +184,18 @@
           <table class="tariff__list">
             <tr class="tariff__item">
               <th></th>
-              <thead>
+              <th class="color">
                 <p class="tariff__description">БАЗА</p>
                 <p class="tariff__number">1,99 USD</p>
-              </thead>
-              <thead>
+              </th>
+              <th class="color color-line">
                 <p class="tariff__description">СТАНДАРТ</p>
                 <p class="tariff__number">3,99 USD</p>
-              </thead>
-              <thead>
+              </th>
+              <th class="color">
                 <p class="tariff__description">АНЛИМ</p>
                 <p class="tariff__number">9,99 USD</p>
-              </thead>
+              </th>
             </tr>
             <tr class="tariff__item">
               <td class="cell">
