Делаю стилизацию каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,38 +8,40 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/pink.svg" width="74" height="23" alt="Пинк">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toogle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a>
-                Главная
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="photo.html">
-                Фотографии
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="contest.html">
-                Конкурс
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">
-                HTML Academy
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="img/pink.svg" width="74" height="23" alt="Пинк">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toogle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item--active">
+                <a href="index.html">
+                  Главная
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a>
+                  Фотографии
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a href="form.html">
+                  Конкурс
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a href="#">
+                  HTML Academy
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="page-main main-catalog">
       <section class="photos">
@@ -62,49 +64,49 @@
         <div class="photos__wrapper">
           <div class="photos__comment">
             <p class="comment__author-name"><b>Анна</b>(5 минут назад)</p>
-            <p class="comment__like">нравится:215 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             <p class="comment__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+            <p class="comment__like">нравится: 215 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Левон</b>(5 часов назад)</p>
               <p class="comment__text">Вчера он на луну летал,сегодня в руки к нам попал.</p>
-              <p class="comment__like">нравится:356 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
+              <p class="comment__like">нравится: 356 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Антон</b>(12 часов назад)</p>
               <p class="comment__text">Соседи будут рады!</p>
-              <p class="comment__like">нравится:666 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
+              <p class="comment__like">нравится: 666 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Борис</b>(20 часов назад)</p>
               <p class="comment__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
-              <p class="comment__like">нравится:215 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
+              <p class="comment__like">нравится: 215 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Сергей</b>(25 часов назад)</p>
               <p class="comment__text">Самая кубанская в мире!</p>
-              <p class="comment__like">нравится:4 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
+              <p class="comment__like">нравится: 4 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Максим</b>(40 часов назад)</p>
               <p class="comment__text">Где снег-то?</p>
-              <p class="comment__like">нравится:150 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
+              <p class="comment__like">нравится: 150 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Надежда</b>(45 часов назад)</p>
               <p class="comment__text">Всем GM и взаимные лайки!</p>
-              <p class="comment__like">нравится:2560 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
+              <p class="comment__like">нравится: 2560 <img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"></p>
             </div>
           </div>
         </div>
@@ -119,20 +121,26 @@
           </div>
           <div class="user__foto"></div>
           <div class="range__filter">
-            <div class="range__control">
+            <div class="range__filter-wrapper">
               <img src="img/range-filter/crop.svg" width="44" height="44" alt="обрезать">
-              <div class="scale"></div>
-              <div class="toggle" tabindex="0"></div>
+              <div class="range__control">
+                <div class="scale"></div>
+                <div class="toggle" tabindex="0" style="left: 80%"></div>
+              </div>
             </div>
-            <div class="range__control">
-              <img src="img/range-filter/fill.svg" width="48" height="43" alt="насыщенность">
-              <div class="scale"></div>
-              <div class="toggle" tabindex="0"></div>
+            <div class="range__filter-wrapper">
+              <img class="saturation" src="img/range-filter/fill.svg" width="48" height="43" alt="насыщенность">
+              <div class="range__control">
+                <div class="scale"></div>
+                <div class="toggle" tabindex="0" style="left: 15%"></div>
+              </div>
             </div>
-            <div class="range__control">
-              <img src="img/range-filter/contrast.svg" width="32" height="32" alt="контраст">
-              <div class="scale"></div>
-              <div class="toggle" tabindex="0"></div>
+            <div class="range__filter-wrapper">
+              <img class="contrast" src="img/range-filter/contrast.svg" width="32" height="32" alt="контраст">
+              <div class="range__control">
+                <div class="scale"></div>
+                <div class="toggle" tabindex="0" style="left: 50%"></div>
+              </div>
             </div>
           </div>
           <div class="post-it__user-foto">
