--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
                 </a>
               </li>
               <li class="site-list__item">
-                <a href="photo.html">
+                <a href="catalog.html">
                   Фотографии
                 </a>
               </li>
