Начал делать адаптивную сетку главной

--- a/source/index.html
+++ b/source/index.html
@@ -56,28 +56,33 @@
       <section class="page-main__download">
         <div class="download-header__wrapper">
           <header class="page-main__header">
-            <h2 class="title">Взгляните на жизнь<br>
-              иначе!</h2>
+            <div class="title__wrapper">
+              <h2 class="title">Взгляните на жизнь<br>
+              иначе!
+              </h2>
+            </div>
             <div class="page-main__header-download">
-              <button class="page-download" type="button">Скачать приложение</button>
-              <ul class="page-main__list main-list">
-                <li class="main-list__item">
-                  <a class="main-item__logo">
-                    <img class="main-item__logo-image" src="img/apple-logo.svg" width="47" height="56" alt="apple-logo">
-                  </a>
-                </li>
-                <li class="main-list__item">
-                  <a class="main-item__logo">
-                    <img class="main-item__logo-image" src="img/android-logo.svg" width="43" height="47" alt="android-logo">
-                  </a>
-                </li>
-                <li class="main-list__item">
-                  <a class="main-item__logo">
-                    <img class="main-item__logo-image" src="img/microsoft-logo.svg" width="44" height="41" alt="microsoft-logo">
-                  </a>
-                </li>
-              </ul>
-              <p class="header-download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+              <div class="main-list__wrapper">
+                <button class="page-download" type="button">Скачать приложение</button>
+                <ul class="page-main__list main-list">
+                  <li class="main-list__item">
+                    <a class="main-item__logo">
+                      <img class="main-item__logo-image" src="img/apple-logo.svg" width="47" height="56" alt="apple-logo">
+                    </a>
+                  </li>
+                  <li class="main-list__item">
+                    <a class="main-item__logo">
+                      <img class="main-item__logo-image2" src="img/android-logo.svg" width="47" height="56" alt="android-logo">
+                    </a>
+                  </li>
+                  <li class="main-list__item">
+                    <a class="main-item__logo">
+                      <img class="main-item__logo-image3" src="img/microsoft-logo.svg" width="47" height="56" alt="microsoft-logo">
+                    </a>
+                  </li>
+                </ul>
+                <p class="header-download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+              </div>
             </div>
           </header>
         </div>
@@ -87,7 +92,7 @@
           <h2 class="visually-hidden">Наши предложения</h2>
           <div class="proposal__stats">
             <p class="proposal__text">
-              Устали от серости<br>
+              Устали от серости
               мегаполиса?
             </p>
             <p class="proposal__text">
@@ -95,6 +100,10 @@
               предложить!
             </p>
           </div>
+        </div>
+      </section>
+      <section class="our__proposals">
+        <div class="our-proposals__wrapper">
           <ul class="proposal__list">
             <li class="proposal__item">
               <h3 class="proposal__title">Поднимает настроение</h3>
