--- a/source/index.html
+++ b/source/index.html
@@ -108,24 +108,24 @@
             <li class="proposal__item">
               <h3 class="proposal__title">Поднимает настроение</h3>
               <p class="proposal__description">
-                Приложение позволит вам победить<br>
-                осеннюю хандру и депрессию<br>
+                Приложение позволит вам победить
+                осеннюю хандру и депрессию
                 буквально в несколько кликов!
               </p>
             </li>
             <li class="proposal__item">
               <h3 class="proposal__title">Меняет мир вокруг</h3>
               <p class="proposal__description">
-                Сделайте снимок и украсте его<br>
-                смайликом или текстовой подписью,<br>
+                Сделайте снимок и украсте его
+                смайликом или текстовой подписью,
                 чтобы усилить эффект
               </p>
             </li>
             <li class="proposal__item">
               <h3 class="proposal__title">Заводит новых друзей</h3>
               <p class="proposal__description">
-                Ставьте лайки, комментируйте,<br>
-                делитесь фотографиями с друзьями и<br>
+                Ставьте лайки, комментируйте,
+                делитесь фотографиями с друзьями и
                 заводите новых
               </p>
             </li>
