Делаю секцию address

--- a/source/index.html
+++ b/source/index.html
@@ -137,16 +137,18 @@
       </section>
       <section class="research">
         <div class="research__wrapper">
-          <h2 class="research__title">
-            Эффект на 24 часа!
-          </h2>
-          <p class="research__item">
-            Британские ученые провели исследования
-            и докозали, что положительный эффект
-            от использования приложения длится
-            целые сутки!
-          </p>
-          <a class="research__larger" href="#">Узнать больше об исследовании</a>
+          <div class="research-title__wrapper">
+            <h2 class="research__title">
+              Эффект на 24 часа!
+            </h2>
+            <p class="research__item">
+              Британские ученые провели исследования
+              и докозали, что положительный эффект
+              от использования приложения длится
+              целые сутки!
+            </p>
+            <a class="research__larger" href="#">Узнать больше об исследовании</a>
+          </div>
         </div>
       </section>
       <section class="reviews">
@@ -270,11 +272,11 @@
       <section class="address">
         <div class="address__wrapper">
           <h2 class="address__title">
-            Остались вопросы?<br>
+            Остались вопросы?
             Свяжитесь с нами!
           </h2>
           <div class="address-phone__contacts contacts">
-            <b class="address__text">Звоните:</b>
+            <p class="address__text">Звоните:</p>
             <p class="contacts__phone">
               <a class="address__phone" href="tel:+78125556666">
                 +7 (812) 555-66-66
@@ -282,7 +284,7 @@
             </p>
           </div>
           <div class="address-mail__contacts contacts">
-            <b class="address__text">Пишите:</b>
+            <p class="address__text">Пишите:</p>
             <p class="contacts__mail">
               <a class="address__mail" href="#">
                 mail@htmlacademy.ru
@@ -290,7 +292,7 @@
             </p>
           </div>
           <div class="address-company__contacts contacts">
-            <b class="address__text">Приезжайте в гости:</b>
+            <p class="address__text">Приезжайте в гости:</p>
             <p class="contacts__company">
               ул. Большая Конюшенная, 19/8
             </p>
